--- a/.github/workflows/push-docker-v3.yml
+++ b/.github/workflows/push-docker-v3.yml
@@ -114,23 +114,25 @@ jobs:
         env:
           DIGEST: ${{ steps.build-push-regular.outputs.digest }}
           TAGS: ${{ steps.meta.outputs.tags }}
+          USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}/s-pdf
         run: |
           echo "$TAGS" | tr ',' '\n' | while read -r tag; do
             cosign sign-blob \
               --key ./cosign.key \
               --yes \
-              "${tag}@${DIGEST}"
+              "${USERNAME}@${DIGEST}"
           done
 
       - name: Verify signatures
         env:
           DIGEST: ${{ steps.build-push-regular.outputs.digest }}
-          TAGS: ${{ steps.build-push-regular.outputs.imageid }}
+          TAGS: ${{ steps.meta.outputs.tags }}
+          USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}/s-pdf
         run: |
           echo "$TAGS" | tr ',' '\n' | while read -r tag; do
             cosign verify \
               --key ./cosign.pub \
-              "${tag}@${DIGEST}"
+              "${USERNAME}@${DIGEST}"
           done
 
       - name: Inspect latest-regular
@@ -175,23 +177,25 @@ jobs:
         env:
           DIGEST: ${{ steps.build-push-lite.outputs.digest }}
           TAGS: ${{ steps.meta2.outputs.tags }}
+          USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}/s-pdf
         run: |
           echo "$TAGS" | tr ',' '\n' | while read -r tag; do
             cosign sign-blob \
               --key ./cosign.key \
               --yes \
-              "${tag}@${DIGEST}"
+              "${USERNAME}@${DIGEST}"
           done
 
       - name: Verify signatures
         env:
           DIGEST: ${{ steps.build-push-lite.outputs.digest }}
           TAGS: ${{ steps.build-push-lite.outputs.imageid }}
+          USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}/s-pdf
         run: |
           echo "$TAGS" | tr ',' '\n' | while read -r tag; do
             cosign verify \
               --key ./cosign.pub \
-              "${tag}@${DIGEST}"
+              "${USERNAME}@${DIGEST}"
           done
 
       - name: Inspect latest-ultra-lite
@@ -238,23 +242,25 @@ jobs:
         env:
           DIGEST: ${{ steps.build-push-fat.outputs.digest }}
           TAGS: ${{ steps.meta3.outputs.tags }}
+          USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}/s-pdf
         run: |
           echo "$TAGS" | tr ',' '\n' | while read -r tag; do
             cosign sign-blob \
               --key ./cosign.key \
               --yes \
-              "${tag}@${DIGEST}"
+              "${USERNAME}@${DIGEST}"
           done
 
       - name: Verify signatures
         env:
           DIGEST: ${{ steps.build-push-fat.outputs.digest }}
           TAGS: ${{ steps.build-push-fat.outputs.imageid }}
+          USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}/s-pdf
         run: |
           echo "$TAGS" | tr ',' '\n' | while read -r tag; do
             cosign verify \
               --key ./cosign.pub \
-              "${tag}@${DIGEST}"
+              "${USERNAME}@${DIGEST}"
           done
 
       - name: Inspect latest-fat
