--- a/.github/workflows/push-docker-v3.yml
+++ b/.github/workflows/push-docker-v3.yml
@@ -110,18 +110,18 @@ jobs:
           echo "Generated cosign.key and cosign.pub"
           ls -l ./cosign*
 
-      - name: Sign regular images
-        env:
-          DIGEST: ${{ steps.build-push-regular.outputs.digest }}
-          TAGS: ${{ steps.meta.outputs.tags }}
-          USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}/s-pdf
-        run: |
-          echo "$TAGS" | tr ',' '\n' | while read -r tag; do
-            cosign sign \
-              --key ./cosign.key \
-              --yes \
-              "${USERNAME}@${DIGEST}"
-          done
+      # - name: Sign regular images
+      #   env:
+      #     DIGEST: ${{ steps.build-push-regular.outputs.digest }}
+      #     TAGS: ${{ steps.meta.outputs.tags }}
+      #     USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}/s-pdf
+      #   run: |
+      #     echo "$TAGS" | tr ',' '\n' | while read -r tag; do
+      #       cosign sign \
+      #         --key ./cosign.key \
+      #         --yes \
+      #         "${USERNAME}@${DIGEST}"
+      #     done
 
       - name: Verify signatures
         env:
@@ -173,18 +173,18 @@ jobs:
           provenance: true
           sbom: true
 
-      - name: Sign ultra-lite images
-        env:
-          DIGEST: ${{ steps.build-push-lite.outputs.digest }}
-          TAGS: ${{ steps.meta2.outputs.tags }}
-          USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}/s-pdf
-        run: |
-          echo "$TAGS" | tr ',' '\n' | while read -r tag; do
-            cosign sign \
-              --key ./cosign.key \
-              --yes \
-              "${USERNAME}@${DIGEST}"
-          done
+      # - name: Sign ultra-lite images
+      #   env:
+      #     DIGEST: ${{ steps.build-push-lite.outputs.digest }}
+      #     TAGS: ${{ steps.meta2.outputs.tags }}
+      #     USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}/s-pdf
+      #   run: |
+      #     echo "$TAGS" | tr ',' '\n' | while read -r tag; do
+      #       cosign sign \
+      #         --key ./cosign.key \
+      #         --yes \
+      #         "${USERNAME}@${DIGEST}"
+      #     done
 
       - name: Verify signatures
         env:
@@ -238,18 +238,18 @@ jobs:
           provenance: true
           sbom: true
 
-      - name: Sign fat images
-        env:
-          DIGEST: ${{ steps.build-push-fat.outputs.digest }}
-          TAGS: ${{ steps.meta3.outputs.tags }}
-          USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}/s-pdf
-        run: |
-          echo "$TAGS" | tr ',' '\n' | while read -r tag; do
-            cosign sign \
-              --key ./cosign.key \
-              --yes \
-              "${USERNAME}@${DIGEST}"
-          done
+      # - name: Sign fat images
+      #   env:
+      #     DIGEST: ${{ steps.build-push-fat.outputs.digest }}
+      #     TAGS: ${{ steps.meta3.outputs.tags }}
+      #     USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}/s-pdf
+      #   run: |
+      #     echo "$TAGS" | tr ',' '\n' | while read -r tag; do
+      #       cosign sign \
+      #         --key ./cosign.key \
+      #         --yes \
+      #         "${USERNAME}@${DIGEST}"
+      #     done
 
       - name: Verify signatures
         env:
