--- a/.github/workflows/push-docker-v3.yml
+++ b/.github/workflows/push-docker-v3.yml
@@ -123,17 +123,17 @@ jobs:
       #         "${USERNAME}@${DIGEST}"
       #     done
 
-      - name: Verify signatures
-        env:
-          DIGEST: ${{ steps.build-push-regular.outputs.digest }}
-          TAGS: ${{ steps.meta.outputs.tags }}
-          USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}/s-pdf
-        run: |
-          echo "$TAGS" | tr ',' '\n' | while read -r tag; do
-            cosign verify \
-              --key ./cosign.pub \
-              "${USERNAME}@${DIGEST}"
-          done
+      # - name: Verify signatures
+      #   env:
+      #     DIGEST: ${{ steps.build-push-regular.outputs.digest }}
+      #     TAGS: ${{ steps.meta.outputs.tags }}
+      #     USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}/s-pdf
+      #   run: |
+      #     echo "$TAGS" | tr ',' '\n' | while read -r tag; do
+      #       cosign verify \
+      #         --key ./cosign.pub \
+      #         "${USERNAME}@${DIGEST}"
+      #     done
 
       - name: Inspect latest-regular
         run: |
@@ -186,17 +186,17 @@ jobs:
       #         "${USERNAME}@${DIGEST}"
       #     done
 
-      - name: Verify signatures
-        env:
-          DIGEST: ${{ steps.build-push-lite.outputs.digest }}
-          TAGS: ${{ steps.build-push-lite.outputs.imageid }}
-          USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}/s-pdf
-        run: |
-          echo "$TAGS" | tr ',' '\n' | while read -r tag; do
-            cosign verify \
-              --key ./cosign.pub \
-              "${USERNAME}@${DIGEST}"
-          done
+      # - name: Verify signatures
+      #   env:
+      #     DIGEST: ${{ steps.build-push-lite.outputs.digest }}
+      #     TAGS: ${{ steps.build-push-lite.outputs.imageid }}
+      #     USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}/s-pdf
+      #   run: |
+      #     echo "$TAGS" | tr ',' '\n' | while read -r tag; do
+      #       cosign verify \
+      #         --key ./cosign.pub \
+      #         "${USERNAME}@${DIGEST}"
+      #     done
 
       - name: Inspect latest-ultra-lite
         run: |
@@ -251,17 +251,17 @@ jobs:
       #         "${USERNAME}@${DIGEST}"
       #     done
 
-      - name: Verify signatures
-        env:
-          DIGEST: ${{ steps.build-push-fat.outputs.digest }}
-          TAGS: ${{ steps.build-push-fat.outputs.imageid }}
-          USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}/s-pdf
-        run: |
-          echo "$TAGS" | tr ',' '\n' | while read -r tag; do
-            cosign verify \
-              --key ./cosign.pub \
-              "${USERNAME}@${DIGEST}"
-          done
+      # - name: Verify signatures
+      #   env:
+      #     DIGEST: ${{ steps.build-push-fat.outputs.digest }}
+      #     TAGS: ${{ steps.build-push-fat.outputs.imageid }}
+      #     USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}/s-pdf
+      #   run: |
+      #     echo "$TAGS" | tr ',' '\n' | while read -r tag; do
+      #       cosign verify \
+      #         --key ./cosign.pub \
+      #         "${USERNAME}@${DIGEST}"
+      #     done
 
       - name: Inspect latest-fat
         run: |
